# kartof-music

src/: index.html  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
